@@ -317,7 +317,9 @@ $defcfg = array( '$config_version' => array( 'name' => _("Config File Version"),
                  '$available_languages' => array( 'name' => _("Available languages"),
                                                   'type' => SMOPT_TYPE_STRING,
                                                   'size' => 40 ),
-                 '$agresive_decoding'  => array( 'name' => _("Use agresive decoding"),
+                 '$aggressive_decoding'  => array( 'name' => _("Enable aggressive decoding"),
+                                                 'type' => SMOPT_TYPE_BOOLEAN ),
+                 '$loosy_encoding'  => array( 'name' => _("Enable loosy encoding"),
                                                  'type' => SMOPT_TYPE_BOOLEAN ),
                  'Group10' => array( 'name' => _("Tweaks"),
                                      'type' => SMOPT_TYPE_TITLE ),
